namespace DesignPatterns.Structural.Decorator
{
    public abstract class Component
    {
        public abstract void Operation();
    }
}
